issues with DB connection, user registration not registering with MongoDB

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 PORt = 3001
 
-DATABASE = mongodb+srv://aiswift511:pOtPFXK3fpAym7Y0@cluster0.ckha2fc.mongodb.net/ariswiftphotography
-?retryWrites=true&w=majority
+DATABASE = mongodb+srv://aiswift511:pOtPFXK3fpAym7Y0@cluster0.ckha2fc.mongodb.net/ariswiftphotography?retryWrites=true&w=majority
+
+SECRET_KEY = abcdefghijklmnopqrstuvwxyz123456
